<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/_25sdp">

    <LinearLayout
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_bg"
        android:padding="@dimen/_5sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:contentDescription="@string/todo"
                android:padding="@dimen/_6sdp"
                android:src="@drawable/ic_trash"
                app:tint="?ns_body_dark" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="@dimen/_9sdp"
                android:text="@string/delete_account"
                android:textColor="?ns_title"
                android:textSize="@dimen/_13ssp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/iv_dialog_close"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:background="@drawable/bar_selector"
                android:contentDescription="@string/todo"
                android:padding="@dimen/_5sdp"
                android:src="@drawable/ic_close"
                app:tint="?ns_title" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/sure_delete_account"
            android:textColor="?ns_title_sub"
            android:textSize="@dimen/_13ssp"
            android:layout_margin="@dimen/_10sdp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="@dimen/_5sdp">

            <TextView
                android:id="@+id/tv_no"
                android:layout_width="0dp"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_weight="1"
                android:background="@drawable/btn_danger"
                android:gravity="center"
                android:text="@string/no"
                android:textColor="?ns_white"
                android:textSize="@dimen/_13ssp" />

            <TextView
                android:id="@+id/tv_yes"
                android:layout_width="0dp"
                android:layout_height="@dimen/_30sdp"
                android:layout_weight="1"
                android:background="@drawable/btn_primary"
                android:gravity="center"
                android:text="@string/yes"
                android:textColor="?ns_white"
                android:textSize="@dimen/_13ssp" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>